[tool.poetry]
name = "ServeStatus"
version = "0.1.0"
description = ""
authors = ["Rocha, Jairo Matos <contato@jairomr.com.br>"]

[tool.poetry.dependencies]
python = "^3.8"
Flask = "^2.0.1"
dynaconf = "^3.1.4"
flask-mongoengine = "^1.0.0"
python-dotenv = "^0.17.1"
urllib3 = "^1.26.4"


[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
